--- a/trunk/README
+++ b/trunk/README
@@ -31,7 +31,8 @@ The last command depends on your Linux distro and/or KDE verions, of course.
 
 
 CODING CONVENTIONS
-- configure your editor to replace 1 Tab with 4 spaces
+
+- configure your editor to replace 1 tab with 4 spaces
 - '{' and '}' in a new line
 - members end with '_'
 - members and functions with lower camel case (lowerCamelCaseLooksLikeThis)
@@ -41,6 +42,8 @@ CODING CONVENTIONS
 - surround operators with spaces except where it makes sense.
 - do init lists like in the example below.
 - divide several classes in one file with:
+- prefer ++i over i++ because ++i can be faster
+- use size_t to loop over std::vector or arrays
 
 //------------------------------------------------------------------------------
 
@@ -57,3 +60,15 @@ struct MyTestClass : public BaseClass
         std::cout << "hello" << std::endl;
     }
 };
+
+VARIABLE NAMES
+
+in order to provide consisting variable naming here a list of variable names which should be used:
+
+iterator iter
+identifiere id
+ostringstream oss
+expression expr
+
+
+
