--- a/trunk/README
+++ b/trunk/README
@@ -45,7 +45,7 @@ CODING CONVENTIONS
 - surround operators with spaces except where it makes sense.
 - do init lists like in the example below.
 - divide several classes in one file with:
-- prefer ++i over i++ because ++i can be faster
+- prefer ++i over i++ because ++i can be faster in some cases
 - use size_t to loop over std::vector or arrays
 
 //------------------------------------------------------------------------------
@@ -68,7 +68,8 @@ struct MyTestClass : public BaseClass
 
 VARIABLE NAMES
 
-in order to provide consistent variable naming here a list of variable names which should be used:
+In order to provide consistent variable naming here a list of variable names
+which should be used:
 
 iterator        iter
 identifiere     id
@@ -82,9 +83,9 @@ SOURCE TREE
 
 utils/
     -> all things not directly related to compilers like data structures go here
-fe/ -> front end
+fe/ -> front-end
     all lexer, parser, syntaxtree related stuff goes here
-im/ -> intermediate
-    all ssa, back end independent related stuff like optimizations goes here
-be/ -> back end
+me/ -> middle-end
+    all ssa, front-end independent related stuff like optimizations goes here
+be/ -> back-end
     -> register allocators, code generators go here
