- moved copy insertion to a class - code clean up

--- a/trunk/HACKING
+++ b/trunk/HACKING
@@ -53,3 +53,8 @@ identifier      id
 ostringstream   oss
 expression      expr
 register        reg
+InstrNode*      instrNode
+InstrBase*      instr
+BBNode*         bbNode
+BasicBlock*     bb
+
